--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: cyan;
+    background: lightblue;
     text-align: center;
     font-family: sans-serif;
     font-size: 12px;
